--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -7,28 +7,32 @@
     z-index: 20;
     background-color: rgba(0, 0, 0, 0.75);
   }
-
+  
 .modal {
-    position: fixed;
-    top: 20vh;
-    left: 5%;
-    width: 90%;
-    background-color: white;
-    padding: 1rem;
-    border-radius: 14px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    z-index: 30;
-    animation: slide-down 300ms ease-out forwards;
-  }
-
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  max-width: 80%;
+  width: auto; 
+  max-height: 80%;
+  overflow-y: auto;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  margin-left: 300px;
+}
+  
 @media (min-width: 768px) {
     .modal {
       width: 40rem;
       left: calc(50% - 20rem);
     }
   }
-
-  @keyframes slide-down {
+  
+@keyframes slide-down {
     from {
       opacity: 0;
       transform: translateY(-3rem);
